[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/enemies/enemy_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/godot_helper_pack/core/audio/random_audio_stream_player_3d.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sfx_zombie_death1_jdymusic.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/sfx_zombie_death2_jdymusic.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/sfx_zombie_death3_jdymusic.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/sfx_zombie_damage_taken1_jdymusic.mp3" type="AudioStream" id=6]
[ext_resource path="res://scenes/enemies/zombie.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/sfx_zombie_damage_taken3_jdymusic.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/sfx_zombie_damage_taken2_jdymusic.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/sfx_zombie_attack2_jdymusic.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/sfx_zombie_bite1_jdymusic.mp3" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/sfx_zombie_attack1_jdymusic.mp3" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/sfx_zombie_bite2_jdymusic.mp3" type="AudioStream" id=13]

[node name="Zombie" instance=ExtResource( 1 )]
script = ExtResource( 7 )

[node name="Die" parent="StateMachine" index="2"]
rand_death_sounds = NodePath("../../DeathSounds")

[node name="DeathSounds" type="Spatial" parent="." index="6"]
script = ExtResource( 2 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="DeathSounds" index="0"]
stream = ExtResource( 3 )
unit_db = 24.0
bus = "SoundFx"

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="DeathSounds" index="1"]
stream = ExtResource( 4 )
unit_db = 24.0
bus = "SoundFx"

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="DeathSounds" index="2"]
stream = ExtResource( 5 )
unit_db = 24.0
bus = "SoundFx"

[node name="DamageSounds" type="Spatial" parent="." index="7"]
script = ExtResource( 2 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="DamageSounds" index="0"]
stream = ExtResource( 6 )
unit_db = 24.0
bus = "SoundFx"

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="DamageSounds" index="1"]
stream = ExtResource( 9 )
unit_db = 24.0
bus = "SoundFx"

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="DamageSounds" index="2"]
stream = ExtResource( 8 )
unit_db = 24.0
bus = "SoundFx"

[node name="AttackSounds" type="Spatial" parent="." index="8"]
script = ExtResource( 2 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="AttackSounds" index="0"]
stream = ExtResource( 12 )
unit_db = 24.0
bus = "SoundFx"

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="AttackSounds" index="1"]
stream = ExtResource( 10 )
unit_db = 24.0
bus = "SoundFx"

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="AttackSounds" index="2"]
stream = ExtResource( 11 )
unit_db = 24.0
bus = "SoundFx"

[node name="AudioStreamPlayer3D4" type="AudioStreamPlayer3D" parent="AttackSounds" index="3"]
stream = ExtResource( 13 )
unit_db = 24.0
bus = "SoundFx"

[connection signal="attack_made" from="StateMachine/Attack" to="." method="_on_Attack_attack_made"]
